# dock

./: readme.md
ai/: .env.example  .gitignore  pyproject.toml
ai/app/: __init__.py  main.py
ai/contract_ai/: __init__.py  cli.py  compliance.py  drafting.py  extractor.py  llm.py  parser.py  risk.py  types.py
ai/contract_ai/resources/: clauses.yaml  policies.yaml
ai/contract_ai/resources/templates/: base_contract.jinja
api/: .env.example  Dockerfile  docker-compose.yaml  package.json
api/drizzle/: 0001_thankful_warbird.sql  0002_wild_betty_brant.sql  0003_quick_gressill.sql  0003_round_spencer_smythe.sql
api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
api/src/: index.ts
api/src/db/: index.ts  schema.ts
api/src/internal/auth/: controller.ts
api/src/internal/chat/: controller.ts  rag.ts
api/src/internal/contract/: controller.ts  service.ts
api/src/lib/: auth.ts  embedding.ts
api/src/lib/actions/: resources.ts
web/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/contracts/: page.tsx
web/src/app/inbox/: page.tsx
web/src/app/login/: page.tsx
web/src/app/manta/: page.tsx
web/src/app/repository/: page.tsx
web/src/components/: QuertClientLayout.tsx  app-sidebar.tsx  conditional-layout.tsx  contract-card.tsx  contract-status-header-card.tsx  document-sidebar.tsx  login-form.tsx  store-signed-doc.tsx
web/src/hooks/: use-cursor-visibility.ts
web/src/lib/: auth-client.ts
(+16 files in other folders)
