[project]
name = "ai"
version = "0.1.0"
description = "Contract AI service (hybrid-only: LLM + rules with fallback)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
		"pydantic>=2.7",
		"fastapi>=0.111",
		"uvicorn>=0.30",
		"pypdf>=4.2",
		"python-docx>=1.1",
		"Jinja2>=3.1",
		"dateparser>=1.2",
		"PyYAML>=6.0",
		"regex>=2024.4.16",
		"google-generativeai>=0.8",
]

[project.scripts]
contract-ai = "contract_ai.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
"contract_ai" = [
	"resources/*",
	"resources/**/*",
]
